<resources>
    <string name="app_name">iParking</string>
    <!-- Login Activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="required_field">Campo obligatorio</string>
    <!-- Signin Activity -->
    <string name="hint_name">Nombre completo</string>
    <string name="hint_repeat_password">Repita contraseña</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden</string>
    <!-- Permissions Activity -->
    <string name="permissions_text">
        Ha denegado los permisos necesarios para que iParking conozca su ubicación. Sin estos
        permisos, el funcionamiento de la aplicación es imposible, puesto que sin conocer su
        posición en el mapa no podremos mostrarle los aparcamientos más cercanos.
        \n
        \n
        Si desea utilizar la aplicación, pulse el botón inferior y acepte conceder a iParking los
        permisos de ubicación. Si no desea conceder estos permisos, no podrá utilizar la aplicación.
        \n
        \n
        Si rechaza por segunda vez los permisos de ubicación, no podrá concederlos desde esta
        aplicación. Llegada esta situación, para conceder los permisos deberá hacerlo desde los
        ajustes de su dispositivo.
    </string>
    <string name="permissions_button">Permisos</string>
    <!-- Map Activity -->
    <string name="route_button">Ruta</string>
    <string name="book_button">Reserva</string>
    <string name="stay_button">Estancia</string>
    <string name="booking_fare">Reservas: %s euros</string>
    <string name="stay_fare">Estancias: %s euros/minuto</string>
    <string name="free_spots">Plazas libres disponibles</string>
    <string name="no_spots">No hay plazas libres disponibles</string>
    <!-- Book Spot Activity -->
    <string name="book_spot">Reserva una plaza</string>
    <string name="parking">Parking</string>
    <string name="date">Fecha</string>
    <string name="choose_vehicle">Elija un vehículo</string>
    <string name="register_vehicle">Registrar un vehículo</string>
    <string name="registered_vehicle">Vehículo registrado con éxito</string>
    <string name="checkout">Confirmar y pagar</string>
    <string name="booking_complete">Reserva completada con éxito</string>
    <string name="no_empty_spots">No hay sitios libres en el parking seleccionado</string>
    <string name="wrong_data_provided">El vehículo indicado no existe en el sistema</string>
    <string name="existing_booking">Ya tienes una reserva activa en este parking</string>
    <!-- Begin Stay Activity -->
    <string name="begin_stay">Inicia una estancia</string>
    <string name="stay_began">Estancia iniciada con éxito</string>
    <string name="existing_stay">Ya tienes una estancia activa en este parking</string>
    <string name="confirm">Confirmar</string>
    <string name="no_stay_found">No se encontró la estancia indicada</string>
    <!-- Stay Activity -->
    <string name="current_stay">Estancia actual</string>
    <string name="start_date">Inicio</string>
    <string name="fare">Tarifa</string>
    <string name="fare_long">%s euros/minuto</string>
    <string name="vehicle">Vehículo</string>
    <string name="end_stay">Finalizar estancia</string>
    <string name="stay_ended">Estancia finalizada con éxito</string>
    <string name="show_map">Volver al mapa</string>
    <!-- Pay Activity -->
    <string name="pay">Pagar</string>
    <string name="hint_card">Nº Tarjeta</string>
    <string name="hint_cvc">CVC</string>
    <string name="hint_expiring_month">Mes Expiración</string>
    <string name="hint_expiring_year">Año Expiración</string>
    <string name="pay_completed">Pago completado</string>
    <string name="pay_failed">Pago fallido. Inténtelo de nuevo</string>
    <string name="price">Precio: %s euros</string>
    <!-- Register Vehicle Activity -->
    <string name="register">Registrar</string>
    <string name="hint_nickname">Nombre</string>
    <string name="hint_license_plate">Matrícula</string>
    <string name="register_failed">El vehículo no pudo ser registrado</string>
    <!-- User Activity -->
    <string name="profile">Perfil</string>
    <string name="remove_vehicle">Eliminar</string>
    <string name="my_vehicles">Mis vehículos</string>
    <string name="vehicle_not_found">El vehículo no pudo ser encontrado</string>
    <string name="vehicle_removed">El vehículo fue eliminado con éxito</string>
    <!-- Errores -->
    <string name="connection_failure">Error de conexión. Reinténtelo más tarde.</string>
    <string name="auth_failure">No se pudo iniciar sesión. Revise sus credenciales.</string>
    <string name="signin_failure">El email introducido pertenece a otra cuenta existente.</string>
    <string name="missing_fields">Rellene todos los campos del formulario</string>
    <string name="canceled">Operación cancelada</string>
    <string name="occupation_failure">No se pudo recuperar el nivel de ocupación</string>
    <!-- Permisos -->
    <string name="permission_accepted">Permisos aprobados</string>
    <string name="permission_denied">Permisos denegados</string>
</resources>