<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SigninActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/etRepeatPassword"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/sign_up"
            android:onClick="signin"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/login"
            android:onClick="login"/>

    </LinearLayout>

</RelativeLayout>