<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StayActivity">

    <TextView
        android:id="@+id/tvCurrentStay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="@dimen/card_view_padding"
        android:textSize="@dimen/title_text_size"
        android:text="@string/current_stay"/>

    <LinearLayout
        android:id="@+id/layoutParking"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/tvCurrentStay"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/labelParking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:text="@string/parking"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/tvParking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutStayFare"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/layoutParking"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/labelStayFare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:text="@string/fare"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/tvStayFare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutStartDate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/layoutStayFare"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/labelStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:text="@string/start_date"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVehicle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/layoutStartDate"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/labelVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:text="@string/vehicle"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/tvVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/layoutVehicle"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <Button
            android:id="@+id/buttonEndStay"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/end_stay"
            android:onClick="endStay"/>

    </LinearLayout>


</RelativeLayout>