<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BookSpotActivity">

    <TextView
        android:id="@+id/tvBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="@dimen/card_view_padding"
        android:textSize="@dimen/title_text_size"
        android:text="@string/book_spot"/>

    <LinearLayout
        android:id="@+id/layoutBookingParking"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/tvBooking"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/labelBookingParking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:text="@string/parking"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/tvBookingParking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBookingDate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/layoutBookingParking"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <TextView
            android:id="@+id/tvBookingDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_margin_inlayout"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerBookingVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_below="@+id/layoutBookingDate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/spinnerBookingVehicle"
        android:layout_marginTop="@dimen/form_margin"
        android:layout_marginHorizontal="@dimen/component_margin">

        <Button
            android:id="@+id/buttonBookingRegisterVehicle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/register_vehicle"
            android:onClick="registerVehicle"/>

        <Button
            android:id="@+id/buttonBookingConfirm"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/checkout"
            android:onClick="confirm"/>

    </LinearLayout>


</RelativeLayout>