<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="#FFFFFF"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="64dp" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/buttonRange">

        <Button
            android:id="@+id/buttonRoute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/route_button"
            android:layout_weight="1"
            android:onClick="showRoute"/>

        <Button
            android:id="@+id/buttonBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/book_button"
            android:layout_weight="1"
            android:onClick="bookSpot"/>

        <Button
            android:id="@+id/buttonStay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/stay_button"
            android:layout_weight="1"
            android:onClick="beginStay"/>
    </LinearLayout>

    <TextView
        android:id="@+id/bottomSheetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="@dimen/card_view_padding" />

    <TextView
        android:id="@+id/bottomSheetAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/card_view_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bottomSheetStayFare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/card_view_padding" />

    <TextView
        android:id="@+id/bottomSheetBookingFare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/card_view_padding" />

</LinearLayout>