<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin_inlayout"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/label_text_size"
        android:text="@string/profile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/tvProfile">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/form_margin_inlayout"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:id="@+id/labelName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/form_margin_inlayout"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:id="@+id/tvMyVehicles"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/label_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="@dimen/form_margin_inlayout"
                android:text="@string/my_vehicles"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listVehicles"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_marginTop="@dimen/title_margin">
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonRegisterVehicle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:padding="@dimen/button_padding"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/register_vehicle"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="registerVehicle"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>